<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sampah_organik">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_organik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Color_Primary"
        app:navigationIcon="@drawable/back_button"
        app:title="Sampah Organik"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pengertian_organik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Pengertian"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_organik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Deskripsi_Organik"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianOrganik"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/pengertian_organik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Deskripsi_Organik2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianOrganik1"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Deskripsi_Organik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/jenis_organik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. Jenis Sampah Organik"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Deskripsi_Organik2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Organik_Kering"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="A. Sampah Organik Kering"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/jenis_organik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Deskripsi_Kering"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianOrganikKering"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Organik_Kering"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Organik_Basah"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="B. Sampah Organik Basah"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Deskripsi_Kering"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Deskripsi_Basah"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianOrganikBasah"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Organik_Basah"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>