<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sampah_b3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Color_Primary"
        app:navigationIcon="@drawable/back_button"
        app:title="Sampah B3"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pengertian_Anorganik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Pengertian"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_b3"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Deskripsi_Anorganik"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianB3"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/pengertian_Anorganik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/jenis_anorganik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. Jenis Sampah B3"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Deskripsi_Anorganik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/B3_1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="A. Sampah B3 dari sumber tidak spesifik"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/jenis_anorganik"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Pengertian_B3_1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianB3_1"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/B3_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/B3_2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="B. Sampah B3 dari sumber spesifik"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/Pengertian_B3_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Pengertian_B3_2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/PengertianB3_2"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/B3_2"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>