<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="700dp"
        android:layout_height="300dp"
        android:src="@drawable/aset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="halo"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:layout_marginStart="17dp"/>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/aset1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="17dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_location"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:src="@drawable/aset2"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_location"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/location"
        app:layout_constraintStart_toStartOf="@id/iv_location"
        app:layout_constraintBottom_toBottomOf="@id/iv_location"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="@id/ic_location"
        app:layout_constraintBottom_toBottomOf="@id/ic_location"
        android:layout_marginStart="40dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_description"
        android:layout_width="380dp"
        android:layout_height="150dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/judul"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_sampah_des"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/sampah"
            android:layout_marginStart="280dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/poppins_regular"
            android:lines="3"
            android:text="@string/deskripsi"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_fitur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu Fitur"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/card_description"
        app:layout_constraintTop_toBottomOf="@id/card_description"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_sampah"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_fitur"
        app:layout_constraintTop_toBottomOf="@id/tv_fitur">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_truk"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/truk"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_truk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jemput Sampah"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="8dp"
            android:layout_marginTop="90dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_jenis"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/card_description"
        app:layout_constraintTop_toBottomOf="@id/tv_fitur">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_sampah_jenis"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/jenis"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_jenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jenis Sampah"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="17dp"
            android:layout_marginTop="90dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_riwayat"
        android:layout_width="340dp"
        android:layout_height="150dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_fitur"
        app:layout_constraintTop_toBottomOf="@id/card_sampah">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_riwayat"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/riwayat" />

        <TextView
            android:id="@+id/tv_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="110dp"
            android:layout_marginTop="95dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>